# dmlc-core

./: .gitignore  CMakeLists.txt
example/: CMakelists.txt
test/: CMakeLists.txt
